# Llama-Agentic.

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  repl.py  requirements.txt  test_config.py
config/: settings.py
permissions/: gate.py
providers/: anthropic_provider.py  gemini_provider.py  ollama_provider.py  openrouter_provider.py  setup.py
session/: compactor.py  session_store.py  transcript.py
tools/: bash_exec.py  code_search.py  file_list.py  file_read.py  file_write.py
ui/: diff_viewer.py  splash.py  theme.py
